CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(msm)

OPTION(BUILD_TESTING "Build tests" ON)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++14")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og")
SET(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

ENABLE_TESTING()

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(tui)

SET(CPACK_SOURCE_IGNORE_FILES
	"^${CMAKE_SOURCE_DIR}/build.*/"
	"/\\\\..*"
)
SET(CPACK_GENERATOR TGZ;DEB)
SET(CPACK_PACKAGE_CONTACT "cwahbong")
SET(CPACK_DEB_COMPONENT_INSTALL ON)
include(CPack)
