PROJECT(libmsm)

FILE(GLOB_RECURSE libmsm_SOURCES src/*.cpp)

SET(CMAKE_CXX_VISIBILITY_PRESET hidden)

SET(LIBRARY_NAME msm)

ADD_LIBRARY(${LIBRARY_NAME} SHARED ${libmsm_SOURCES})
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC include ${PROJECT_BINARY_DIR})

INCLUDE(GenerateExportHeader)
GENERATE_EXPORT_HEADER(${LIBRARY_NAME})

INSTALL(FILES
	${PROJECT_BINARY_DIR}/msm_export.h
	DESTINATION include/msm
	COMPONENT dev
)
INSTALL(DIRECTORY
	include/msm
	DESTINATION include
	COMPONENT dev
)

INSTALL(TARGETS msm
	LIBRARY DESTINATION lib
	COMPONENT runtime
)

